--- a/better-photos/main.scss
+++ b/better-photos/main.scss
@@ -272,6 +272,84 @@ a {
     }
 }
 
+.upload {
+    padding: 45px 35px;
+    border-bottom: 1px solid rgba(#fff, 0.1);
+    color: $color-grey-medium;
+
+    &__container {
+        background-color: rgba(#fff, 0.03);
+        height: 330px;
+        border-radius: 3px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: $ts;
+        position: relative;
+        overflow: hidden;
+
+        &:hover {
+            background-color: rgba(#fff, 0.06);
+        }
+
+        &::before {
+            content: '';
+            border: 2px dashed #434747;
+            position: absolute;
+            top: -1px;
+            bottom: -1px;
+            left: -1px;
+            right: -1px;
+        }
+    }
+
+    &__icon {
+        font-size: 23px;
+    }
+
+    &__text {
+        color: #fff;
+        margin-top: 8px;
+    }
+
+    &__alternative {
+        font-size: 12px;
+        margin-top: -2px;
+    }
+}
+
+// footer
+.footer {
+    padding-top: 50px;
+    padding-left: 35px;
+    font-size: 11px;
+    color: rgba($color-grey-medium, 0.6);
+
+    &__list {
+        display: flex;
+        column-gap: 15px;
+        margin-top: 10px;
+    }
+
+    &__item {
+
+    }
+
+    &__link {
+        transition: $ts;
+
+        &:hover {
+            color: $color-grey-medium;
+        }
+    }
+}
+
+.copyright {
+    font-size: inherit;
+}
+
 // gallery
 
 .gallery {
