--- a/recall/css/main.css
+++ b/recall/css/main.css
@@ -88,3 +88,33 @@ p.subhead {
   position: relative;
   z-index: 2;
 }
+
+/* Features Section */
+section.features {
+  background: var(--primary-color);
+  color: white;
+  transform: skewY(12deg) translateY(-8em);
+}
+
+section.features .wrapper {
+  transform: skewY(-12deg);
+}
+
+section.features .wrapper ul {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  padding: 5em 0 10em;
+}
+
+section.features svg {
+  width: 3.5rem;
+  margin-left: -.15em;
+}
+
+section.features strong {
+  display: flex;
+  flex-direction: column;
+  font-size: 2.6rem;
+  gap: .2em;
+}
