--- a/recall/css/main.css
+++ b/recall/css/main.css
@@ -193,3 +193,49 @@ nav.secondary-nav ul li a {
   text-decoration: underline;
   font-size: 1.4rem;
 }
+
+/* Media Queries -- Tablet */
+@media only screen and (min-width: 700px) {
+
+  .header-cta {
+    display: inherit;
+    color: white;
+    font-size: 1.6rem;
+    background-color: var(--primary-color);
+    font-weight: bold;
+    padding: .5em .7em;
+    border-radius: .3em;
+  }
+
+  .hero .wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 3em;
+  }
+
+  section.hero {
+    text-align: left;
+  }
+
+  h1 {
+    font-size: 5.1rem;
+    line-height: 110%;
+  }
+
+  .hero .right-col {
+    position: relative;
+    width: 500px;
+    height: 600px;
+    overflow: hidden;
+  }
+
+  .phone {
+    position: absolute;
+    left: 0;
+    width: 500px;
+  }
+
+  .cta-btns {
+    justify-content: left;
+  }
+}
