--- a/recall/css/main.css
+++ b/recall/css/main.css
@@ -238,4 +238,55 @@ nav.secondary-nav ul li a {
   .cta-btns {
     justify-content: left;
   }
+
+  /* Features Section  */
+  section.features {
+    transform: skewY(7eg) translateY(-8em);
+  }
+
+  section.features .wrapper {
+    transform: skewY(-7eg);
+  }
+
+  section.features:before {
+    content: '';
+    position: absolute;
+    background: url('../assets/graphic.svg') no-repeat;
+    width: 205px;
+    height: 80px;
+    bottom: -30px;
+    left: 10%;
+  }
+
+  section.features .wrapper ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 7em 0 12em;
+  }
+
+  section.features .wrapper ul li:last-of-type {
+    grid-column: 1/3;
+  }
+
+  /* Testimonials Section */
+  .testimonial-info {
+    display: flex;
+    gap: 2em;
+  }
+
+  .author-pic, .author {
+    flex: 1;
+  }
+
+  .author-pic {
+    margin: 0;
+  }
+
+  .author {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
 }
