Add header styles

--- a/designalytics/css/main.css
+++ b/designalytics/css/main.css
@@ -52,4 +52,36 @@ svg {
   .hide-tablet {
     display: none;
   }
+}
+header.primary {
+  display: flex;
+  justify-content: space-between;
+}
+
+header svg {
+  width: 42px;
+}
+
+.user img {
+  width: 30px;
+  height: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+
+header.primary, .user {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+a.logo img {
+  width: 170px;
 }/*# sourceMappingURL=main.css.map */
