--- a/designalytics/css/main.scss
+++ b/designalytics/css/main.scss
@@ -1,2 +1,35 @@
 @use 'variables';
 @use 'global';
+
+// Header
+header.primary {
+    display: flex;
+    justify-content: space-between;
+}
+
+header svg {
+    width: 42px;
+}
+
+.user img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+}
+
+header.primary, .user {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+a.logo img {
+    width: 170px;
+}
