--- a/designalytics/css/global.css
+++ b/designalytics/css/global.css
@@ -40,7 +40,11 @@ svg {
   display: none;
 }
 
-@media only screen and (min-width: 620px) {
+.toggle-menu {
+  transform: translateX(0);
+}
+
+@media only screen and (max-width: 620px) {
   .hide-tablet {
     display: none;
   }
