--- a/designalytics/css/main.scss
+++ b/designalytics/css/main.scss
@@ -1,7 +1,7 @@
 @use 'variables';
 @use 'global';
 
-// Header
+/* Header */
 header.primary {
     display: flex;
     justify-content: space-between;
@@ -33,3 +33,40 @@ header.primary, .user {
 a.logo img {
     width: 170px;
 }
+
+/* Mobile Nav */
+aside {
+    position: fixed;
+    z-index: 999;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    background: var(--primary-color);
+    width: 40%;
+    padding: 3em;
+    text-align: right;
+    transition: transform .6s;
+    transform: translateX(100%);
+
+    img {
+        background: white;
+        width: 30px;
+        height: 30px;
+        border-radius: .3em;
+        cursor: pointer;
+    }
+
+    ul {
+        margin-top: 6em;
+
+        li {
+            margin-bottom: 1.5em;
+
+            a {
+                color: white;
+                font-size: 2.6rem;
+            }
+        }
+    }
+}
+
