--- a/designalytics/css/main.css
+++ b/designalytics/css/main.css
@@ -121,4 +121,99 @@ aside ul li {
 aside ul li a {
   color: white;
   font-size: 2.6rem;
+}
+
+/* Sales stats */
+.sales, .extra-stats {
+  padding: 3.8em;
+  color: white;
+  border-radius: 1em;
+  margin-top: 2em;
+}
+
+.sales {
+  background: var(--primary-color);
+  position: relative;
+}
+.sales h2 {
+  font-size: 6.4rem;
+  margin: 0;
+}
+.sales .label {
+  display: flex;
+  align-items: baseline;
+  text-transform: uppercase;
+  gap: 0.5em;
+}
+.sales img {
+  position: absolute;
+  bottom: -45px;
+  right: -5px;
+  width: 300px;
+}
+
+.subtitle {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+}
+
+/* extra stats */
+.extra-stats {
+  padding: 3.8em 0;
+}
+.extra-stats ul {
+  display: flex;
+  justify-content: space-between;
+}
+.extra-stats ul strong {
+  font-size: 2.6rem;
+  margin-bottom: 0.2em;
+  display: block;
+}
+
+/* Earnings and visitors */
+h1 {
+  color: white;
+  font-size: 2.6rem;
+}
+
+.chart-container {
+  background: var(--secondary-color);
+  border-radius: 1em;
+  padding: 2.8em;
+}
+
+/* Customers */
+.customers ul {
+  display: grid;
+  margin-top: 2em;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2em;
+  color: white;
+}
+.customers ul li {
+  display: flex;
+  justify-content: space-between;
+}
+.customers ul li .cta-btn img {
+  width: 50px;
+  height: 50px;
+  padding: 1em;
+  background: var(--secondary-color);
+  border-radius: 0.3em;
+}
+.customers ul .user-left {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+.customers ul .user-left img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+.customers ul .user-info strong {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
