--- a/designalytics/css/main.scss
+++ b/designalytics/css/main.scss
@@ -70,3 +70,106 @@ aside {
     }
 }
 
+/* Sales stats */
+.sales, .extra-stats {
+    padding: 3.8em;
+    color: white;
+    border-radius: 1em;
+    margin-top: 2em;
+}
+
+.sales {
+    background: var(--primary-color);
+    position: relative;
+
+    h2 {
+        font-size: 6.4rem;
+        margin: 0;
+    }
+
+    .label {
+        display: flex;
+        align-items: baseline;
+        text-transform: uppercase;
+        gap: 0.5em;
+    }
+
+    img {
+        position: absolute;
+        bottom: -45px;
+        right: -5px;
+        width: 300px;
+    }
+}
+
+.subtitle {
+    text-transform: uppercase;
+    font-size: 1.6rem;
+}
+
+/* extra stats */
+.extra-stats {
+    padding: 3.8em 0;
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+
+        strong {
+            font-size: 2.6rem;
+            margin-bottom: .2em;
+            display: block;
+        }
+    }
+}
+
+/* Earnings and visitors */
+h1 {
+    color: white;
+    font-size: 2.6rem;
+}
+
+.chart-container {
+    background: var(--secondary-color);
+    border-radius: 1em;
+    padding: 2.8em;
+}
+
+/* Customers */
+.customers ul {
+    display: grid;
+    margin-top: 2em;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+    color: white;
+
+    li {
+        display: flex;
+        justify-content: space-between;
+
+        .cta-btn img {
+            width: 50px;
+            height: 50px;
+            padding: 1em;
+            background: var(--secondary-color);
+            border-radius: .3em;
+        }
+    }
+
+    .user-left {
+        display: flex;
+        align-items: center;
+        gap: 1em;
+
+        img {
+            width: 24px;
+            height: 24px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    }
+
+    .user-info strong {
+        display: block;
+    }
+}
