--- a/designalytics/css/global.css
+++ b/designalytics/css/global.css
@@ -40,11 +40,7 @@ svg {
   display: none;
 }
 
-.toggle-menu {
-  transform: translateX(0);
-}
-
-@media only screen and (max-width: 620px) {
+@media only screen and (min-width: 620px) {
   .hide-tablet {
     display: none;
   }
