--- a/designalytics/css/main.scss
+++ b/designalytics/css/main.scss
@@ -48,6 +48,11 @@ aside {
     transition: transform .6s;
     transform: translateX(100%);
 
+    a {
+        color: white;
+        font-size: 2.6rem;
+    }
+
     img {
         background: white;
         width: 30px;
@@ -58,17 +63,16 @@ aside {
 
     ul {
         margin-top: 6em;
-
         li {
             margin-bottom: 1.5em;
-
-            a {
-                color: white;
-                font-size: 2.6rem;
-            }
         }
     }
 }
+
+.toggle-menu {
+    transform: translateX(0);
+}
+
 
 /* Sales stats */
 .sales, .extra-stats {
@@ -162,8 +166,8 @@ h1 {
         gap: 1em;
 
         img {
-            width: 24px;
-            height: 24px;
+            width: 48px;
+            height: 48px;
             object-fit: cover;
             border-radius: 50%;
         }
@@ -171,5 +175,172 @@ h1 {
 
     .user-info strong {
         display: block;
+    }
+}
+
+/* Tablet */
+@media only screen and (min-width: 620px) {
+    .signout {
+        display: block;
+        padding: .7em;
+        background-color: var(--secondary-color);
+        border-radius: .3em;
+    }
+
+    .header-right nav {
+        display: flex;
+        align-items: center;
+        gap: 2em;
+    }
+
+    aside {
+        position: inherit;
+        height: auto;
+        background: unset;
+        width: auto;
+        padding: 2em;
+        margin-top: 2em;
+        transform: unset;
+        text-align: inherit;
+        transition: unset;
+        background-color: var(--secondary-color);
+        border-radius: 1em;
+
+        img {
+            background: unset;
+            cursor: unset;
+        }
+
+        a {
+            font-size: 1.8rem;
+        }
+
+        nav ul {
+            margin-top: 0;
+            display: flex;
+            justify-content: space-around;
+
+            li {
+                margin-bottom: 0;
+                display: flex;
+                align-items: center;
+                gap: 0.5em;
+
+                img {
+                    display: block !important;
+                }
+            }
+        }
+    }
+
+    /* Main area */
+    main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto);
+        gap: 3em;
+    }
+
+    .earnings, .customers {
+        grid-column: 1 / 3;
+    }
+
+    .extra-stats ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 2em;
+    }
+}
+
+/* Desktop */
+@media only screen and (min-width: 1000px) {
+    .wrapper {
+        max-width: 1200px;
+        margin: 3em auto;
+        padding: 0 2em;
+    }
+
+    .col2 {
+        display: flex;
+        gap: 2em;
+    }
+
+    aside {
+        width: 10%;
+        flex-grow: 3;
+        min-width: 250px;
+        padding: 2em;
+
+        nav {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        nav ul {
+            justify-content: space-around;
+            flex-direction: column;
+            gap: 2em;
+
+            li {
+                margin-bottom: 0;
+                display: flex;
+                align-items: center;
+                gap: 0.5em;
+
+                img {
+                    display: block !important;
+                }
+            }
+        }
+    }
+    /* main */
+    main {
+        flex-grow: 2;
+        grid-template-columns: 1.2fr 2fr;
+        grid-template-rows: repeat(3, auto);
+        gap: 3em
+    }
+
+    .extra-stats {
+        padding: 3em;
+        display: flex;
+        justify-content: center;
+        border: 1px solid var(--border-color);
+
+        ul {
+            display: flex;
+            align-items: center;
+            gap: 5em;
+        }
+    }
+
+    .premium {
+        display: block;
+        background: var(--inner-panel-color);
+        padding: 2em;
+        color: white;
+        border-radius: .3em;
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            h3 {
+                font-size: 1.6rem;
+                margin: 0;
+            }
+
+            img {
+                width: 20px;
+
+            }
+        }
+        p {
+            line-height: 150%;
+        }
     }
 }
